--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ The main function in this package is `wq_calc()`:
 library(waterquality)
 library(raster)
 s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
-s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Am092Bsub"), sat = "sentinel2")
+s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Be16FLHGreenRedNIR"), sat = "sentinel2")
 plot(s2_two_alg)
 ```
 
