--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to the waterquality package"
-author: "Richard Johansen, Jakub Nowosad"
+author: "Richard Johansen, Jakub Nowosad, Molly Reif, Erich Emery"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
