--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -294,13 +294,13 @@ Xu Min, Hongxing Liu, Richard Beck, John Lekki, Bo Yang, Song Shu, Emily L. Kang
 
 To cite this library, please use the following entry:
 
-Johansen, R., Nowosad, J., Reif, M., Emery, E. (2018). waterquality: Satellite Derived Water Quality Detection Algorithms. R package version 0.2.2. https://rajohansen.github.io/waterquality/
+Johansen, R., Nowosad, J., Reif, M., Emery, E. (2018). waterquality: Satellite Derived Water Quality Detection Algorithms. R package version 0.2.2. https://doi.org/10.5281/zenodo.1493487
 
 @Manual{waterquality,
   title  = {waterquality: Satellite Derived Water Quality Detection Algorithms},
   author = {Richard Johansen, Jakub Nowosad, Molly Reif, Erich Emery},
   year   = {2018},
   note   = {R package version 0.2.2},
-  doi    = {10.5281/zenodo.1492878},
-  url    = {https://rajohansen.github.io/waterquality},
+  doi    = {10.5281/zenodo.1493487},
+  url    = {https://doi.org/10.5281/zenodo.1493487},
 }
