--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -301,6 +301,6 @@ Johansen, R., Nowosad, J., Reif, M., Emery, E. (2018). waterquality: Satellite D
   author = {Richard Johansen, Jakub Nowosad, Molly Reif, Erich Emery},
   year   = {2018},
   note   = {R package version 0.2.2},
-  doi    = {10.5281/zenodo.1493487},
-  url    = {https://doi.org/10.5281/zenodo.1493487},
+  doi    = {https://doi.org/10.5281/zenodo.1493487},
+  url    = {https://rajohansen.github.io/waterquality},
 }
