--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 # waterquality
 
 The goal of **waterquality** is to convert satellite-reflectance imagery to a host of pre-defined water quality algorithms designed for the detection of cholorophyll-a, blue-green algae (Phycocyanin), and Turbidity. 
-This package is able to process the following sensor configurations: WorldView-2, Sentinel-2, Landsat-8, MODIS, MERIS, and OLCI sensors.
+This package is able to process the following sensor configurations: WorldView-2, Sentinel-2, Landsat-8, MODIS, MERIS, and OLCI.
 
 ## Installation
 
