--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ You can install waterquality from github with:
 devtools::install_github("RAJohansen/waterquality")
 ```
 
-## Example
+## Examples
 
 The main function in this package is `wq_calc()`:
 
@@ -48,11 +48,26 @@ s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Be16FLHGreenRedNIR"), sat = "sentinel2")
 plot(s2_two_alg)
 ```
+Additional functionality include the MAP_WQ functions:
 
+```{r example, fig.asp=0.33}
+library(waterquality)
+library(raster)
+library(tmap)
+library(sf)
+s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
+MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
+samples = st_read(system.file("vector/Harsha_Points_CRS.gpkg", package = "waterquality"))
+Map_WQ_raster(WQ_raster = MM12NDCI,
+              sample_points = samples,
+              map_title= "Water Quality Map",
+              raster_style = "quantile",
+              histogram = TRUE)
+```
 To learn more read the ["Introduction to the waterquality package"](https://rajohansen.github.io/waterquality/articles/waterquality_vignette.html) vignette.
 
 ## Package Contributions
 
 We encourage users to submit issues and enhancement requests so we may continue to improve our package. 
 
-Futhermore, if you have a water quality algorithm that was not on our list, and you would like for it to be included in our package please email me at richard.a.johansen@erdc.dren.mil
+Furthermore, if you have a water quality algorithm that was not on our list, and you would like for it to be included in our package please email me at richard.a.johansen@erdc.dren.mil
