--- a/README.Rmd
+++ b/README.Rmd
@@ -58,11 +58,13 @@ library(sf)
 s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
 samples = st_read(system.file("raster/Harsha_Points_CRS.gpkg", package = "waterquality"))
+lake_extent = st_read(system.file("raster/Harsha_Lake_CRS.gpkg", package = "waterquality"))
 Map_WQ_raster(WQ_raster = MM12NDCI,
               sample_points = samples,
               map_title= "Water Quality Map",
               raster_style = "quantile",
               histogram = TRUE)
+
 ```
 To learn more read the ["Introduction to the waterquality package"](https://rajohansen.github.io/waterquality/articles/waterquality_vignette.html) vignette.
 
