--- a/README.Rmd
+++ b/README.Rmd
@@ -48,9 +48,11 @@ s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Be16FLHGreenRedNIR"), sat = "sentinel2")
 plot(s2_two_alg)
 ```
-Additional functionality include the MAP_WQ functions:
+  
+  
 
-```{r example, fig.asp=0.33}
+Additional functionality include the MAP_WQ functions:
+```{r example 2, fig.asp=0.33}
 library(waterquality)
 library(raster)
 library(tmap)
@@ -66,6 +68,8 @@ Map_WQ_raster(WQ_raster = MM12NDCI,
               histogram = TRUE)
 
 ```
+  
+  
 To learn more read the ["Introduction to the waterquality package"](https://rajohansen.github.io/waterquality/articles/waterquality_vignette.html) vignette.
 
 ## Package Contributions
