--- a/README.Rmd
+++ b/README.Rmd
@@ -41,18 +41,19 @@ devtools::install_github("RAJohansen/waterquality")
 
 The main function in this package is `wq_calc()`:
 
-```{r example, fig.asp=0.33}
+```{r example 1 code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
 library(raster)
 s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Be16FLHGreenRedNIR"), sat = "sentinel2")
+```
+```{r example 1 output, fig.asp=0.33}
 plot(s2_two_alg)
 ```
   
-  
 
 Additional functionality include the MAP_WQ functions:
-```{r example 2, fig.asp=0.33}
+```{r example 2 code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
 library(raster)
 library(tmap)
@@ -61,6 +62,9 @@ s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
 samples = st_read(system.file("raster/Harsha_Points_CRS.gpkg", package = "waterquality"))
 lake_extent = st_read(system.file("raster/Harsha_Lake_CRS.gpkg", package = "waterquality"))
+```
+
+```{r example 2 output, fig.asp=0.33}
 Map_WQ_raster(WQ_raster = MM12NDCI,
               sample_points = samples,
               map_title= "Water Quality Map",
