--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -268,6 +268,29 @@ Harsha_All <- wq_calc(Harsha,
 plot(Harsha_All) # Only displays first 12 of 28
 ```
 
+
+Additional functionality include the MAP_WQ functions:
+```{r example 2 code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
+library(waterquality)
+library(raster)
+library(tmap)
+library(sf)
+s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
+MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
+samples = st_read(system.file("raster/Harsha_Simple_Points_CRS.gpkg", package = "waterquality"))
+lake_extent = st_read(system.file("raster/Harsha_Lake_CRS.gpkg", package = "waterquality"))
+```
+
+```{r example 2 output, fig.asp=0.33}
+Map_WQ_raster(WQ_raster = MM12NDCI,
+              sample_points = samples,
+              map_title= "Water Quality Map",
+              raster_style = "quantile",
+              histogram = TRUE)
+
+```
+  
+
 # Acknowledgements
 
 The waterquality package was developed with funding from the U.S. Army Corps of Engineers.
