--- a/README.Rmd
+++ b/README.Rmd
@@ -40,13 +40,13 @@ devtools::install_github("RAJohansen/waterquality")
 
 The main function in this package is `wq_calc()`:
 
-```{r example 1 code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
+```{r example_code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
 library(raster)
 s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 s2_two_alg = wq_calc(s2, alg = c("TurbChip09NIROverGreen", "Be16FLHGreenRedNIR"), sat = "sentinel2")
 ```
-```{r example 1 output, fig.asp=0.33}
+```{r example_output, fig.asp=0.33}
 plot(s2_two_alg)
 ```
 
