Still working on documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -55,4 +55,4 @@ plot(s2_two_alg)
 
 We encourage users to submit issues and enhancement requests so we may continue to improve our package. 
 
-Furthermore, if you have a water quality algorithm that was not on our list, and you would like for it to be included in our package please email me at Richard.A.Johansen@erdc.dren.mil
+Furthermore, if you have a water quality algorithm that was not on our list, and you would like for it to be included in our package please email Richard.A.Johansen@erdc.dren.mil
